[package]
name = "diode"
version = "2.1.1"
edition = "2024"
license = "GPL-3.0"

[workspace]
members = [".", "diode-file-bindings"]

[dependencies]
clap = { version = "4", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
crossbeam-channel = { version = "0", default-features = false, features = [
    "std",
] }
crossbeam-utils = { version = "0", default-features = false, features = [
    "std",
] }
libc = { version = "0", default-features = false, features = ["std"] }
log = { version = "0", default-features = false, features = ["std"] }
rand = { version = "0", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }
raptorq = { version = "2", default-features = false, features = ["std"] }
semka = { version = "2", default-features = false, features = [] }
simplelog = { version = "0", default-features = false, features = [
    "termcolor",
    "local-offset",
] }

[target.'cfg(any(target_arch="x86", target_arch="x86_64"))'.dependencies]
fasthash = { version = "0", optional = true, default-features = false, features = [
    "sse42",
    "aes",
    "avx",
    "avx2",
] }

[target.'cfg(not(any(target_arch="x86", target_arch="x86_64")))'.dependencies]
fasthash = { version = "0", optional = true, default-features = false }

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"
nursery = { level = "deny", priority = -1 }
or_fun_call = "allow"

[features]
default = [ "file-hash", "receive-native", "send-native", "receive-msg", "send-msg", "receive-mmsg", "send-mmsg" ]
file-hash = [ "dep:fasthash" ]
transfer-hash = [ "dep:fasthash" ]
receive-native = [ ]
receive-msg = [ ]
receive-mmsg = [ ]
send-native = [ ]
send-msg = [ ]
send-mmsg = [ ]
