[workspace]
members = [ "lidi-protocol", "lidi-send", "lidi-receive", "lidi-bindings", "lidi-clients", "lidi-command-utils" ]
default-members = [ "lidi-send", "lidi-receive", "lidi-bindings", "lidi-clients" ]
resolver = "3"

[workspace.package]
version = "3.0.0"
edition = "2024"
license = "LGPL-3.0"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing-errors-doc = "allow"
nursery = { level = "deny", priority = -1 }

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
codegen-units = 1
panic = "abort"


