[package]
name = "lidi-clients"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies.clap]
version = "4"
default-features = false
features = [ "color", "derive", "error-context", "help", "std", "suggestions", "usage" ]

[dependencies.crossbeam-channel]
version = "0"
optional = true
default-features = false
features = [ "std" ]

[dependencies.inotify]
version = "0"
optional = true
default-features = false

[dependencies.libc]
version = "0"
default-features = false
features = [ "std" ]

[dependencies.log]
version = "0"
default-features = false
features = [ "std" ]

[dependencies.log4rs]
version = "1"
optional = true
default-features = false
features = [ "compound_policy", "config_parsing", "console_appender", "file_appender", "rolling_file_appender", "size_trigger", "threshold_filter", "time_trigger", "yaml_format" ]

[dependencies.openssl]
version = "0"
optional = true
default-features = false

[dependencies.rand]
version = "0"
default-features = false
features = [ "std", "sys_rng" ]

[dependencies.regex]
version = "1"
default-features = false
features = [ "std", "unicode" ]

[dependencies.simplelog]
version = "0"
default-features = false
features = [ "termcolor", "local-offset" ]

[dependencies.twox-hash]
version = "2"
optional = true
default-features = false
features = [ "std", "xxhash3_128" ]

[features]
default = [ "hash", "inotify", "log4rs", "tcp", "tls", "unix" ]
hash = [ "dep:twox-hash" ]
inotify = [ "dep:crossbeam-channel", "dep:inotify" ]
log4rs = [ "dep:log4rs" ]
tcp = [ ]
tls = [ "dep:openssl" ]
unix = [ ]
