[package]
name = "lidi-command-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", optional = true, default-features = false, features = [ "color", "derive", "std", "usage", "suggestions" ] }
libc = { version = "0", default-features = false, features = ["std"] }
log = { version = "0", default-features = false, features = [ "std", "serde" ] }
openssl = { version = "0", optional = true, default-features = false }
serde = { version = "1", default-features = false, features = [ "std", "derive" ] }
simplelog = { version = "0", default-features = false, features = [
    "termcolor",
    "local-offset",
] }
toml = { version = "1", default-features = false, features = [ "std", "parse", "serde" ] }
twox-hash = { version = "2", optional = true, default-features = false, features = [ "std", "xxhash3_128" ] }

[features]
default = [ ]
command-line = [ "dep:clap" ]
hash = [ "dep:twox-hash" ]
tls = [ "dep:openssl" ]
