[package]
name = "lidi-command-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies.clap]
version = "4"
optional = true
default-features = false
features = [ "color", "derive", "std", "usage", "suggestions" ]

[dependencies.libc]
version = "0"
default-features = false
features = [ "std" ]

[dependencies.log]
version = "0"
default-features = false
features = [ "std", "serde" ]

[dependencies.log4rs]
version = "1"
optional = true
default-features = false
features = [ "compound_policy", "config_parsing", "console_appender", "file_appender", "rolling_file_appender", "size_trigger", "threshold_filter", "time_trigger", "yaml_format" ]

[dependencies.openssl]
version = "0"
optional = true
default-features = false

[dependencies.metrics-exporter-prometheus]
version = "0"
optional = true
default-features = false
features = [ "http-listener" ]

[dependencies.serde]
version = "1"
default-features = false
features = [ "std", "derive" ]

[dependencies.simplelog]
version = "0"
default-features = false
features = [ "local-offset", "termcolor" ]

[dependencies.toml]
version = "1"
default-features = false
features = [ "std", "parse", "serde" ]

[dependencies.twox-hash]
version = "2"
optional = true
default-features = false
features = [ "std", "xxhash3_128" ]

[features]
default = [ ]
command-line = [ "dep:clap" ]
hash = [ "dep:twox-hash" ]
log4rs = [ "dep:log4rs" ]
prometheus = [ "dep:metrics-exporter-prometheus" ]
tls = [ "dep:openssl" ]
