[package]
name = "lidi-receive"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crossbeam-channel = { version = "0", default-features = false, features = [
    "std",
] }
libc = { version = "0", default-features = false, features = ["std"] }
lidi-protocol = { path = "../lidi-protocol", default-features = false }
lidi-command-utils = { path = "../lidi-command-utils", default-features = false }
log = { version = "0", default-features = false, features = ["std"] }
raptorq = { version = "2", default-features = false, features = ["std"] }

[features]
default = [ "command-line", "endpoint-tcp", "endpoint-unix", "hash", "heartbeat", "receive-native", "receive-msg", "receive-mmsg" ]
command-line = [ "lidi-command-utils/command-line" ]
endpoint-tcp = [ ]
endpoint-unix = [ ]
hash = [ "lidi-command-utils/hash" ]
heartbeat = [ ]
receive-native = [ ]
receive-msg = [ ]
receive-mmsg = [ ]
