[package]
name = "lidi-send"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crossbeam-channel = { version = "0", default-features = false, features = [
    "std",
] }
libc = { version = "0", default-features = false, features = ["std"] }
lidi-protocol = { path = "../lidi-protocol", default-features = false }
lidi-command-utils = { path = "../lidi-command-utils", default-features = false }
log = { version = "0", default-features = false, features = ["std"] }
raptorq = { version = "2", default-features = false, features = ["std"] }

[features]
default = [ "command-line", "from-tcp", "from-tls", "from-unix", "hash", "heartbeat", "send-native", "send-msg", "send-mmsg" ]
command-line = [ "lidi-command-utils/command-line" ]
from-tcp = [ ]
from-tls = [ "lidi-command-utils/tls" ]
from-unix = [ ]
hash = [ "lidi-command-utils/hash" ]
heartbeat = [ ]
send-native = [ ]
send-msg = [ ]
send-mmsg = [ ]
